--- a/sh-server/package.json
+++ b/sh-server/package.json
@@ -3,14 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "build": "tsc",
-    "watch-ts": "tsc-w"
+    "start": "node ./www",
+    "tsc": "tsc",
+    "dev": "ts-node-dev --respawn --transpileOnly ./www.ts",
+    "prod": "tsc && node ./build/app.js"
   },
   "dependencies": {
+    "@types/express": "^4.17.1",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
-    "express": "~4.13.1",
-    "mysql": "^2.17.1"
+    "express": "^4.13.4",
+    "mysql": "^2.17.1",
+    "ts-node-dev": "^1.0.0-pre.41",
+    "typescript": "^3.5.3"
   }
 }
