--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "body-parser": "~1.13.2",
     "codelyzer": "~4.5.0",
+    "cookie-parser": "~1.3.5",
+    "express": "~4.13.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
@@ -49,9 +52,6 @@
     "protractor": "~5.4.0",
     "ts-node": "^7.0.1",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2",
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
-    "express": "~4.13.1"
+    "typescript": "^3.2.4"
   }
 }
