--- a/sh-server/package.json
+++ b/sh-server/package.json
@@ -9,11 +9,14 @@
     "prod": "tsc && node ./build/app.js"
   },
   "dependencies": {
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.1",
+    "@types/mysql": "^2.15.7",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "express": "^4.13.4",
     "mysql": "^2.17.1",
+    "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^1.0.0-pre.41",
     "typescript": "^3.5.3"
   }
