--- a/sh-server/package.json
+++ b/sh-server/package.json
@@ -9,6 +9,7 @@
     "prod": "tsc && node ./build/app.js"
   },
   "dependencies": {
+    "@types/body-parser": "^1.17.1",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.1",
     "@types/mysql": "^2.15.7",
