--- a/sh-server/package.json
+++ b/sh-server/package.json
@@ -16,6 +16,7 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "express": "^4.13.4",
+    "express-pino-logger": "^4.0.0",
     "mysql": "^2.17.1",
     "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^1.0.0-pre.41",
