--- a/sh-server/package.json
+++ b/sh-server/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "~1.3.5",
     "express": "^4.13.4",
     "express-pino-logger": "^4.0.0",
+    "linq": "^3.2.0",
     "mysql": "^2.17.1",
     "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^1.0.0-pre.41",
