--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@types/linq": "^2.2.33",
     "angular-font-awesome": "^3.1.2",
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
     "core-js": "^2.5.4",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26",
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
