--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.15",
-    "@angular/cdk": "^8.1.3",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
+    "@angular/animations": "^8.2.6",
+    "@angular/cdk": "^8.2.0",
+    "@angular/common": "~8.2.6",
+    "@angular/compiler": "~8.2.6",
+    "@angular/core": "^8.2.6",
+    "@angular/forms": "~8.2.6",
+    "@angular/material": "^8.2.0",
+    "@angular/platform-browser": "~8.2.6",
+    "@angular/platform-browser-dynamic": "~8.2.6",
+    "@angular/router": "~8.2.6",
     "@types/linq": "^2.2.33",
     "angular-font-awesome": "^3.1.2",
     "body-parser": "~1.13.2",
@@ -27,16 +28,16 @@
     "core-js": "^2.5.4",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
-    "linq": "^3.2.0",
-    "rxjs": "~6.3.3",
+    "linq": "^3.2.1",
+    "rxjs": "~6.5.3",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
     "@angular/cli": "~7.3.8",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
+    "@angular/compiler-cli": "^8.2.6",
+    "@angular/language-service": "~8.2.6",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -54,6 +55,6 @@
     "protractor": "~5.4.0",
     "ts-node": "^7.0.1",
     "tslint": "~5.11.0",
-    "typescript": "^3.2.4"
+    "typescript": "^3.5.3"
   }
 }
