--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~8.2.6",
     "@angular/router": "~8.2.6",
     "@types/linq": "^2.2.33",
+    "@types/node-cache": "^4.1.3",
     "angular-font-awesome": "^3.1.2",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
@@ -29,6 +30,7 @@
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "linq": "^3.2.1",
+    "node-cache": "^4.2.1",
     "rxjs": "~6.5.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
