--- a/sh-server/package.json
+++ b/sh-server/package.json
@@ -11,16 +11,20 @@
   "dependencies": {
     "@types/body-parser": "^1.17.1",
     "@types/cookie-parser": "^1.4.2",
+    "@types/crypto-js": "^3.1.43",
     "@types/express": "^4.17.1",
     "@types/mysql": "^2.15.7",
     "bcryptjs": "^2.4.3",
     "body-parser": "~1.13.2",
+    "colors": "^1.3.3",
     "cookie-parser": "~1.3.5",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.13.4",
     "express-pino-logger": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "linq": "^3.2.0",
     "mysql": "^2.17.1",
+    "node-cache": "^4.2.1",
     "python": "0.0.4",
     "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^1.0.0-pre.41",
