--- a/sh-server/package.json
+++ b/sh-server/package.json
@@ -28,6 +28,7 @@
     "python": "0.0.4",
     "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^1.0.0-pre.41",
-    "typescript": "^3.5.3"
+    "typescript": "^3.5.3",
+    "winston-loggly-bulk": "^3.0.1"
   }
 }
