--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~8.2.6",
     "@angular/platform-browser-dynamic": "~8.2.6",
     "@angular/router": "~8.2.6",
+    "@types/file-saver": "^2.0.1",
     "@types/linq": "^2.2.33",
     "@types/node-cache": "^4.1.3",
     "angular-font-awesome": "^3.1.2",
@@ -28,6 +29,7 @@
     "cookie-parser": "~1.3.5",
     "core-js": "^2.5.4",
     "express": "^4.17.1",
+    "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
     "linq": "^3.2.1",
     "node-cache": "^4.2.1",
