--- a/sh-server/package.json
+++ b/sh-server/package.json
@@ -19,6 +19,7 @@
     "colors": "^1.3.3",
     "cookie-parser": "~1.3.5",
     "crypto-js": "^3.1.9-1",
+    "exceljs": "^2.0.1",
     "express": "^4.13.4",
     "express-pino-logger": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
