--- a/sh-server/package.json
+++ b/sh-server/package.json
@@ -12,10 +12,11 @@
     "@types/body-parser": "^1.17.1",
     "@types/cookie-parser": "^1.4.2",
     "@types/crypto-js": "^3.1.43",
+    "@types/exceljs": "^0.5.3",
     "@types/express": "^4.17.1",
     "@types/mysql": "^2.15.7",
     "bcryptjs": "^2.4.3",
-    "body-parser": "~1.13.2",
+    "body-parser": "^1.19.0",
     "colors": "^1.3.3",
     "cookie-parser": "~1.3.5",
     "crypto-js": "^3.1.9-1",
@@ -28,8 +29,11 @@
     "node-cache": "^4.2.1",
     "python": "0.0.4",
     "reflect-metadata": "^0.1.13",
-    "ts-node-dev": "^1.0.0-pre.41",
+    "ts-node": "^8.4.1",
     "typescript": "^3.5.3",
     "winston-loggly-bulk": "^3.0.1"
+  },
+  "devDependencies": {
+    "ts-node-dev": "^1.0.0-pre.43"
   }
 }
