--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --port 2424 --proxy-config proxy.conf.json --aot",
+    "heroku-postbuild": "ng build --prod --aot",
+    "start-ng": "ng serve --port 2424 --proxy-config proxy.conf.json --aot",
+    "start": "node ./sh-server/build/www.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
+  },
+  "engines": {
+    "node": "12.8.0",
+    "npm": "6.10.2"
   },
   "private": true,
   "dependencies": {
@@ -35,7 +41,8 @@
     "node-cache": "^4.2.1",
     "rxjs": "~6.5.3",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "typescript": "^3.5.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
@@ -48,6 +55,7 @@
     "body-parser": "~1.13.2",
     "codelyzer": "~4.5.0",
     "cookie-parser": "~1.3.5",
+    "enhanced-resolve": "^3.3.0",
     "express": "~4.13.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
