--- a/sh-server/package.json
+++ b/sh-server/package.json
@@ -27,6 +27,7 @@
     "linq": "^3.2.0",
     "mysql": "^2.17.1",
     "node-cache": "^4.2.1",
+    "path": "^0.12.7",
     "python": "0.0.4",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^8.4.1",
