--- a/package.json
+++ b/package.json
@@ -30,6 +30,12 @@
     "@types/file-saver": "^2.0.1",
     "@types/linq": "^2.2.33",
     "@types/node-cache": "^4.1.3",
+    "@types/body-parser": "^1.17.1",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/crypto-js": "^3.1.43",
+    "@types/exceljs": "^0.5.3",
+    "@types/express": "^4.17.1",
+    "@types/mysql": "^2.15.7",
     "angular-font-awesome": "^3.1.2",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
@@ -42,7 +48,22 @@
     "rxjs": "~6.5.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1",
-    "typescript": "^3.5.3"
+    "typescript": "^3.5.3",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "colors": "^1.3.3",
+    "cookie-parser": "~1.3.5",
+    "crypto-js": "^3.1.9-1",
+    "exceljs": "^2.0.1",
+    "express": "^4.13.4",
+    "express-pino-logger": "^4.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "linq": "^3.2.0",
+    "mysql": "^2.17.1",
+    "node-cache": "^4.2.1",
+    "path": "^0.12.7",
+    "python": "0.0.4",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
