--- a/sh-server/package.json
+++ b/sh-server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./www",
-    "tsc": "tsc",
+    "build": "tsc",
     "dev": "ts-node-dev --respawn --transpileOnly ./www.ts",
     "prod": "tsc && node ./build/app.js"
   },
