--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "heroku-postbuild": "ng build --prod --aot",
     "start-ng": "ng serve --port 2424 --proxy-config proxy.conf.json --aot",
     "start": "node ./sh-server/build/www.js",
-    "build": "ng build",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
