--- a/sh-server/package.json
+++ b/sh-server/package.json
@@ -14,6 +14,7 @@
     "@types/crypto-js": "^3.1.43",
     "@types/exceljs": "^0.5.3",
     "@types/express": "^4.17.1",
+    "@types/express-serve-static-core": "^4.16.9",
     "@types/mysql": "^2.15.7",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
