--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/crypto-js": "^3.1.43",
     "@types/exceljs": "^0.5.3",
     "@types/express": "^4.17.1",
+    "@types/express-serve-static-core": "^4.16.9",
     "@types/mysql": "^2.15.7",
     "angular-font-awesome": "^3.1.2",
     "body-parser": "^1.19.0",
