--- a/sh-server/tsconfig.json
+++ b/sh-server/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "typeRoots": [
       "./typings",
-      "./node_modules/@types",
+      "./node_modules/@types"
     ],
     /* Basic Options */
     // "incremental": true,                   /* Enable incremental compilation */
@@ -61,7 +61,7 @@
     // "inlineSources": true,                 /* Emit the source alongside the sourcemaps within a single file; requires '--inlineSourceMap' or '--sourceMap' to be set. */
 
     /* Experimental Options */
-    "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
+    "experimentalDecorators": true       /* Enables experimental support for ES7 decorators. */
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
   }
 }
