--- a/package.json
+++ b/package.json
@@ -27,39 +27,42 @@
     "@angular/platform-browser": "~8.2.6",
     "@angular/platform-browser-dynamic": "~8.2.6",
     "@angular/router": "~8.2.6",
-    "@types/file-saver": "^2.0.1",
-    "@types/linq": "^2.2.33",
-    "@types/node-cache": "^4.1.3",
+    "@fortawesome/angular-fontawesome": "^0.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@types/body-parser": "^1.17.1",
     "@types/cookie-parser": "^1.4.2",
     "@types/crypto-js": "^3.1.43",
     "@types/exceljs": "^0.5.3",
     "@types/express": "^4.17.1",
     "@types/express-serve-static-core": "^4.16.9",
+    "@types/file-saver": "^2.0.1",
+    "@types/linq": "^2.2.33",
     "@types/mysql": "^2.15.7",
+    "@types/node-cache": "^4.1.3",
     "angular-font-awesome": "^3.1.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "colors": "^1.3.3",
     "cookie-parser": "~1.3.5",
     "core-js": "^2.5.4",
-    "express": "^4.13.4",
-    "file-saver": "^2.0.2",
-    "font-awesome": "^4.7.0",
-    "linq": "^3.2.0",
-    "node-cache": "^4.2.1",
-    "rxjs": "~6.5.3",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.9.1",
-    "typescript": "^3.5.3",
-    "bcryptjs": "^2.4.3",
-    "colors": "^1.3.3",
     "crypto-js": "^3.1.9-1",
     "exceljs": "^2.0.1",
+    "express": "^4.13.4",
     "express-pino-logger": "^4.0.0",
+    "file-saver": "^2.0.2",
+    "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.5.1",
+    "linq": "^3.2.0",
     "mysql": "^2.17.1",
+    "node-cache": "^4.2.1",
     "path": "^0.12.7",
     "python": "0.0.4",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "~6.5.3",
+    "tslib": "^1.9.0",
+    "typescript": "^3.5.3",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
